--- a/ui/web-extension/sfMono.css
+++ b/ui/web-extension/sfMono.css
@@ -1,80 +1,91 @@
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 400;
-    src: url('./SFMono/SF-Mono-Regular.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./SFMono/SF-Mono-Regular.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 400;
-    src: url('./SFMono/SF-Mono-RegularItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 400;
+  src: url("./SFMono/SF-Mono-RegularItalic.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 300;
-    src: url('./SFMono/SF-Mono-Light.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 300;
+  src: url("./SFMono/SF-Mono-Light.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 300;
-    src: url('./SFMono/SF-Mono-LightItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 300;
+  src: url("./SFMono/SF-Mono-LightItalic.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 500;
-    src: url('./SFMono/SF-Mono-Medium.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 500;
+  src: url("./SFMono/SF-Mono-Medium.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 500;
-    src: url('./SFMono/SF-Mono-MediumItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 500;
+  src: url("./SFMono/SF-Mono-MediumItalic.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 600;
-    src: url('./SFMono/SF-Mono-Semibold.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 600;
+  src: url("./SFMono/SF-Mono-Semibold.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 600;
-    src: url('./SFMono/SF-Mono-SemiboldItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 600;
+  src: url("./SFMono/SF-Mono-SemiboldItalic.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 700;
-    src: url('./SFMono/SF-Mono-Bold.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./SFMono/SF-Mono-Bold.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 700;
-    src: url('./SFMono/SF-Mono-BoldItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 700;
+  src: url("./SFMono/SF-Mono-BoldItalic.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: normal;
-    font-weight: 900;
-    src: url('./SFMono/SF-Mono-Heavy.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: normal;
+  font-weight: 900;
+  src: url("./SFMono/SF-Mono-Heavy.otf") format("opentype");
 }
 @font-face {
-    font-family: 'SF Mono';
-    font-style: italic;
-    font-weight: 900;
-    src: url('./SFMono/SF-Mono-HeavyItalic.otf') format('opentype');
+  font-family: "SF Mono";
+  font-style: italic;
+  font-weight: 900;
+  src: url("./SFMono/SF-Mono-HeavyItalic.otf") format("opentype");
 }
 
-*{
-    font-family: "SF Mono";
+* {
+  font-family: "SF Mono";
 }
 
-p, h1, h2, h3, h4, h5, h6, div, input,li,a,.text{
-    font-family: "SF Mono" !important;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+input,
+li,
+a,
+.text {
+  font-family: "SF Mono" !important;
 }
